Make sure each dependency link has a width and isn't cut off unreasonably early
Previously these were displayed inline (due to 851a6fc), and inline
elements don't have a width.  Set zero padding and margin and take up
the whole width of the container instead.

--- a/root/static/less/style.less
+++ b/root/static/less/style.less
@@ -117,6 +117,13 @@
   text-decoration: underline;
 }
 
+.dependencies.nav-list.nav > li > a {
+    display: block;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+}
+
 .dropdown-menu {
     overflow-y: auto;
     overflow-x: hidden;
